<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/textViewCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="15pt"
                android:text="@string/cadastro_de_local"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/local"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewCadastro"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextLocal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextData"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextLat"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextLong"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:text="@string/salvar"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextDesc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/buttonLista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:text="IR PARA LISTA"
                android:layout_marginTop="-20dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonSalvar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>